# imswitch-sim

./: .gitignore  README.md  setup.cfg  tox.ini
src/imswitch_sim/: __init__.py  imswitch.yaml  imswitch_sim_controller.py  imswitch_sim_info.py  imswitch_sim_manager.py  imswitch_sim_widget.py
src/imswitch_sim/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
