[metadata]
name = imswitch-sim
version = attr: imswitch_sim.__version__
description = This plugin will organize image acquisition and reconstruction of structured illumination microscopy data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openuc2/imswitch-sim
author = Benedict Diederich
author_email = benedict.diederich@leibniz-ipht.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: imswitch
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/openuc2/imswitch-sim/issues
    Documentation = https://github.com/openuc2/imswitch-sim#README.md
    Source Code = https://github.com/openuc2/imswitch-sim
    User Support = https://github.com/openuc2/imswitch-sim/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    requests
    tifffile
    imswitch
    mcsim; platform_system != "Windows"
    cupy; platform_system != "Windows"
    NanoImagingPack; platform_system != "Windows"
    numpy
    magicgui
    qtpy
    scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
imswitch.manifest =
    imswitch-sim = imswitch_sim:imswitch.yaml
imswitch.implugins =
    imswitch_sim_controller = imswitch_sim:imswitch_sim_controller
    imswitch_sim_widget = imswitch_sim:imswitch_sim_widget

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    imswitch
    pyqt5


[options.package_data]
* = *.yaml
